platform/src/objects/Site_Contact_Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Level__c</fullName>
        <label>Contact Level</label>
        <picklist>
            <picklistValues>
                <fullName>1-Primary site contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Secondary site contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Contact Assignments</relationshipLabel>
        <relationshipName>Site_Contact_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Site Contact Assignments</relationshipLabel>
        <relationshipName>Site_Contact_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Contact__c</fullName>
        <formula>TEXT(Contact__r.Type_of_Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Contact</label>
        <type>Text</type>
    </fields>
    <label>Site Contact Affiliation</label>
    <nameField>
        <displayFormat>SCA-{00000000}</displayFormat>
        <label>Site Contact Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Contact Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>